feat: 虚拟长列表

--- a/docs/pages/frontEnd/面试.md
+++ b/docs/pages/frontEnd/面试.md
@@ -113,3 +113,13 @@ LazyMan("Hank").sleepFirst(5).eat('supper')
 5. 查重的一道算法，给了两种解法还不满意，要我发散思维再给两种。
 6. 如何设计一个组件？
 > 明天2020/7/3010点二面
+
+> 2020/08/21 某Y笔试
+1. cookie 分别有哪些属性，如何设置cookie只在HTTPS上传输，如何设置cookie只读？
+```js
+
+```
+2. arr = ['1', '2', '3'] 有几种改变原数组长度的方法？他们有什么区别？
+3. 实现一个聊天窗口，支持无限滚动；
+- 利用滚动距离，同步性能稍差；
+- 利用 IntersectionObserver API 性能好又简单；
